resp: improve RespReader tests